repair overflow on app component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,18 @@
+:host{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px !important;
+    left: 0px !important;
+}
 
 .app-component {
-    top: -8px;
-	left: -8px;
+    display: flex;
+    flex-grow: 1;
     position: relative;
 	padding-left: 0;
-    width :101%;
-    height: 900px;
+    width :100%;
+    height: 100%;
     display: flex;
     margin: 0 !important;
     overflow: hidden;
