--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -76,7 +76,7 @@
         display: flex;
         flex-direction:column;
         padding : 20px;
-        height: 40%;
+        flex-grow: 1;
 
         .distribution-title{
             background-color: gold;    
